src/app/tips.css
.tips-container {
  max-width: 100%;
  height: 402px;
  width: 1392px;
  display: flex;
  margin-top: 120px;
  background: linear-gradient(
    104.237deg,
    #d7e8fe7d 0%,
    rgb(214 252 254 / 10%) 100%
  );
  margin-left: 24px;
  border-radius: 35px;
}

.tips {
  width: 1159px;
  height: 234px;
  display: flex;
  justify-content: center;
  margin: auto;
  align-items: center;
}

.tips .tip {
  display: flex;
  flex-direction: column;
  gap: 45px;
  width: 365px;
  height: 234px;
  margin-right: 32px;
  margin-left: 32px;
}

.tips .tip img {
  height: 64px;
  width: 64px;
}

.tips .tip p {
  display: flex;
  flex-direction: column;
  font-size: 24px;
  font-weight: 600;
  letter-spacing: -0.05em;
  color: #253347;
  gap: 24px;
}

.tips .tip p span {
  height: 72px;
  font-size: 16px;
  font-weight: 400;
  line-height: 150%;
  color: #5e6e85;
}

@media only screen and (max-width: 820px) {
  .tips-container {
    width: 100%;
    margin: 0;
    height: 503px;
    margin-top: 100px;
  }
  .tips .tip {
    width: 686px;
    flex-direction: row;
    align-items: center;
  }
  .tips-container .tips {
    flex-direction: column;
    align-items: flex-start;
    max-width: 100%;
  }
}

@media only screen and (max-width: 560px) {
  .tips-container .tips .tip {
    height: 100%;
    justify-content: revert;
    width: 100%;
    margin-left: 20px;
    margin-right: 20px;
    flex-direction: column;
    align-items: flex-start;
  }
  .tips-container .tips {
    padding: 10px;
    padding-top: 40px;
    padding-bottom: 40px;
    padding-right: 40px;
  }
  .tips-container,
  .tips {
    height: 100%;
  }
}

